# shroom-theme

./: .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  eslint.config.mjs  generate-showcase-args.js  package-lock.json  package.json  tsconfig.json  validate-themes.js  wcag-contrast.js
.github/: codeql-config.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: _config.yml  index.html  index.ja.html  index.zh.html  validation.md  wcag.html
docs/previewer/: index.html  shroom-previewer-970a35d2726ac63f.js  shroom-previewer-970a35d2726ac63f_bg.wasm
docs/previewer/public/: style.css
editors/helix/: shroom_space.toml  shroom_space_deuteranopia.toml  shroom_space_high_contrast.toml  shroom_space_light.toml  shroom_space_monochrome.toml  shroom_space_protanopia.toml  shroom_space_tritanopia.toml
previewer/: Cargo.toml  README.md  build.rs  index.html
previewer/src/: lib.rs
showcase/: test-samples.cpp  test-samples.css  test-samples.go  test-samples.html  test-samples.js  test-samples.md  test-samples.py  test-samples.rs
src/: extension.ts  theme-generator.ts
src/test/: extension.test.ts
tests/visual/: playwright.config.ts  visual-regression.spec.ts
themes/: shroom-space-deuteranopia-theme.json  shroom-space-high-contrast-theme.json  shroom-space-light-theme.json  shroom-space-monochrome-theme.json  shroom-space-protanopia-theme.json  shroom-space-theme.json  shroom-space-tritanopia-theme.json
tools/: convert.js  generate-editors.js  generate-sbom.js  generate-theme-html.js  tailwind-plugin.js
(+8 files in other folders)
