[package]
name = "shroom-previewer"
version = "0.1.0"
edition = "2021"
description = "Interactive WASM theme previewer for Shroom Space Theme (Rust/Leptos)"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "FileList",
    "File",
    "CssStyleDeclaration",
    "DomRect",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
